Sync 353 - Upgrade sync to support OpenMRS 2.5.x (#42)
* Update unit tests to Junit 5 in line with latest OpenMRS release
* Fix to interceptor due to deprecated methods that no longer operate correctly.
* Additional fixes to interceptor and unit tests
* Remaining fixes for 25x, all unit tests passing